@@ -1,0 +1,25 @@
+<?php 
+
+$lang['please_fix_errors']			= 'Please fix the following errors:';
+$lang['enter_card_name']			= 'Please enter your first and last name as it appears on the card';
+$lang['invalid_card_exp']			= 'The expiration date does not appear to be valid';
+$lang['invalid_card_num']			= 'The card number you entered is not a valid credit card number';
+$lang['enter_card_code']			= 'Please enter the three digit security code on the reverse side of the card';
+$lang['transaction_declined']		= 'Transaction Declined. Please check your card information and try again.';
+$lang['enter_test_mode_credentials']	= 'You must enter login values for TEST mode';
+$lang['enter_live_mode_credentials']	= 'You must enter login values for LIVE mode';
+$lang['all_required_fields']		= 'Please complete all required fields.';
+$lang['card_number']				= 'Card Number';
+$lang['expires_on']					= 'Expires On';
+$lang['cvv_code']					= 'CVV Code';
+$lang['invalid_card_num']			= 'The card number you entered is not a valid credit card number';
+$lang['all_required_fields']		= 'Please complete all required fields.';
+
+//admin
+
+$lang['test_mode']					= 'Test Mode';
+$lang['live_mode']					= 'Live Mode';
+$lang['tm_login']					= 'Test Mode Login ID';
+$lang['tm_key']						= 'Test Mode Transaction Key';
+$lang['lm_login']					= 'Live Mode Login ID';
+$lang['lm_key']						= 'Live Mode Transaction Key';
